Infra/appgw.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appgw
spec:
  selector:
    app: appgw
  ports:
    - name: http
      port: 443
      targetPort: 443
  type: LoadBalancer
