Infra/backend.service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  type: ClusterIP
