Infra/postgresdb.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - name: postgresdb
        image: jmsalonen/postgresdb:latest
        ports:
        - containerPort: 5432
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
spec:
  selector:
    app: postgresdb
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  type: ClusterIP
